--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  command = "CI=false npm run build"
+  base = "frontend"
+  command = "CI=false npm install && npm run build"
   publish = "build"
 
 [[redirects]]
