--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "CI=false npm install --legacy-peer-deps && npm run build"
+  command = "npm install --save date-fns@2.30.0 && CI=false npm install --legacy-peer-deps && npm run build"
   publish = "build"
 
 [build.environment]
