--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mui/x-date-pickers": "^6.10.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
-    "dayjs": "^1.11.13",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
     "papaparse": "^5.5.2",
