--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
     "papaparse": "^5.5.2",
@@ -24,11 +25,12 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.6.2",
     "redux": "^4.2.1",
+    "start": "^5.1.0",
     "styled-components": "^5.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npx update-browserslist-db@latest && react-scripts build",
+    "build": "CI=false npx update-browserslist-db@latest && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -52,5 +54,9 @@
   },
   "devDependencies": {
     "webpack": "^5.81.0"
+  },
+  "resolutions": {
+    "@mui/x-date-pickers/AdapterDateFns": "^6.10.0",
+    "date-fns": "^2.30.0"
   }
 }
